Fixed minor user settings bug + adjusted footer et al. + updated pkgs + beta release.

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Compass",
-    "short_name": "Compass",
+    "name": "hoagieplan",
+    "short_name": "hoagieplan",
     "theme_color": "#0F1E2F",
     "background_color": "#0F1E2F",
     "display": "standalone",
