--- a/backend/minors/CLA.yaml
+++ b/backend/minors/CLA.yaml
@@ -232,7 +232,7 @@ req_list:
   max_counted: 1
   min_needed: 1
   explanation: |-
-    <i>Editor's Note: Students do not enroll in any numbered course for this requirement, so Compass does not check it.</i>
+    <i>Editor's Note: Students do not enroll in any numbered course for this requirement, so hoagieplan does not check it.</i>
     
     A short (ca. 500 words) reflection paper on how the courses add up to a coherent perspective on the ancient world and its reception is required in the student’s final semester.
   completed_by_semester: 8
