--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "compass-backend"
+name = "hoagieplan-backend"
 version = "1.1"
-description = "Dependency manager for the Compass backend"
+description = "Dependency manager for the hoagieplan backend"
 authors = ["TigerApps"]
 license = "MIT"
 # homepage = "https://pucompass.com"
 repository = "https://github.com/ggchiriac/compass"
-keywords = ["django", "backend", "student", "planner", "app", "compass"]
+keywords = ["django", "backend", "student", "planner", "app", "hoagieplan"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
