--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "compass",
-  "version": "1.7",
+  "name": "hoagieplan",
+  "version": "1.8-beta",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000 --turbo",
