--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://iw-compass-8a42583e776b.herokuapp.com/$1"
+      "destination": "https://api.pucompass.com/$1"
     }
   ]
 }
