--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hoagieplan",
-  "version": "1.8-beta",
+  "version": "1.85-beta",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000 --turbo",
@@ -29,6 +29,7 @@
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "evergreen-ui": "^7.1.9",
     "next": "^14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -59,7 +60,7 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^9.3.0",
     "sharp": "^0.33.0",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "3.4.3",
     "webpack": "^5.89.0"
   },
   "license": "MIT",
