--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,9 +2,9 @@
 name = "hoagieplan-backend"
 version = "1.1"
 description = "Dependency manager for the hoagieplan backend"
-authors = ["TigerApps"]
+authors = ["hoagie.io"]
 license = "MIT"
-# homepage = "https://pucompass.com"
+homepage = "https://plan.hoagio.io"
 repository = "https://github.com/ggchiriac/compass"
 keywords = ["django", "backend", "student", "planner", "app", "hoagieplan"]
 
