--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,7 +25,8 @@
       "@/components/*": ["components/*"],
       "@/store/*": ["store/*"],
       "@/app/*": ["app/*"],
-      "@/types": ["types.d.ts"]
+      "@/types": ["types.d.ts"],
+      "@/utils/*": ["utils/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "postcss.config.js,", ".next/types/**/*.ts"],
