--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,9 +30,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "evergreen-ui": "^7.1.9",
-    "next": "^14.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^14.3.0-canary.32",
+    "react": "18.3.0-canary-670811593-20240322",
+    "react-dom": "18.3.0-canary-670811593-20240322",
     "react-virtuoso": "^4.7.7",
     "react-window": "^1.8.10",
     "sass": "^1.71.1",
