--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hoagieplan",
-  "version": "1.85-beta",
+  "version": "1.90-beta",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000 --turbo",
@@ -30,7 +30,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "evergreen-ui": "^7.1.9",
-    "next": "^14.1.0",
+    "next": "^14.3.0-canary.49",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-virtuoso": "^4.7.7",
