--- a/backend/certificates/ACM.yaml
+++ b/backend/certificates/ACM.yaml
@@ -14,9 +14,9 @@ description: At Princeton, the Program in Applied and Computational Mathematics 
   has become available to undergraduate math majors who intend to pursue the PACM
   certificate, the applied math track.
 contacts:
-- type: Program Coordinator
-  name: Gina Holland
-  email: gholland@princeton.edu
+- type: Undergraduate Minor Representative
+  name: Ramon van Handel
+  email: rvan@princeton.edu
 req_list:
 - name: Mathematical Foundations
   max_counted: 3
@@ -28,95 +28,98 @@ req_list:
   max_common_with_major: 0
   pdfs_allowed: 0
   course_list:
-  - MAT 322
-  - MAT 391
-  - MAT 392
-  - MAT 323
-  - MAT 325
-  - MAT 330
-  - MAT 346
-  - MAT 355
-  - MAT 375
-  - MAT 378
-  - MAT 385
-  - MAT 380
-  - MAT 320
-  - MAT 321
-  - MAT 335
-  - MAT 340
-  - MAT 345
-  - MAT 350
-  - MAT 365
-  - MAT 377
-  - MAT 390
-  - MAT 407
-  - MAT 425
-  - MAT 459
-  - MAT 473
-  - MAT 427
-  - MAT 447
-  - MAT 486
+  # TODO: Remove grad-level courses that aren't listed on the PACM website?
   - APC 350
-  - APC 503
-  - APC 501
-  - APC 506
-  - APC 523
-  - APC 527
+  # - APC 503
+  # - APC 501
+  # - APC 506
+  # - APC 523
+  # - APC 527
   - AST 301
   - CBE 448
   - COS 323
-  - COS 325
-  - COS 340
   - ECE 486
   - MAE 305
   - MAE 306
-  - MAE 503
+  # - MAE 503
+  - MAT 3**
+  - MAT 4**
+  # TODO: Replacing list of MAT courses with wildcard? but need to remove any that are Applications
+  # - MAT 305
+  # - MAT 315
+  # - MAT 320
+  # - MAT 321
+  # - MAT 325
+  # - MAT 328
+  # - MAT 330
+  # - MAT 335
+  # - MAT 340
+  # - MAT 345
+  # - MAT 346
+  # - MAT 355
+  # - MAT 365
+  # - MAT 375
+  # - MAT 377
+  # - MAT 378
+  # - MAT 385
+  # - MAT 380
+  # - MAT 391
+  # - MAT 392
+  # - MAT 407
+  # - MAT 425
+  # - MAT 459
+  # - MAT 473
+  # - MAT 427
+  # - MAT 447
+  # - MAT 486
   - ORF 307
   - ORF 309
-  - ORF 405
-  - PHY 521
-  - PHY 523
-  - POL 572
-  - POL 573
-  - QCB 511
+  - ORF 363
+  # - PHY 521
+  # - PHY 523
+  # - POL 572
+  # - POL 573
+  # - QCB 511
 - name: Mathematical Application
   max_counted: 3
-  min_needed: 3
+  min_needed: 2
   explanation: Including signal processing, control theory, and optimization, mathematical
     economics, typically offered by the economics, science, and engineering departments.
   double_counting_allowed: false
   max_common_with_major: 0
   pdfs_allowed: 1
   course_list:
-  - AOS 571
-  - AOS 572
-  - AOS 573
-  - AOS 576
-  - APC 509
-  - APC 514
-  - APC 523
-  - APC 524
+  # - AOS 571
+  # - AOS 572
+  # - AOS 573
+  # - AOS 576
+  # - APC 509
+  # - APC 514
+  # - APC 523
+  # - APC 524
+  - APC 490
   - CBE 341
   - CEE 361
-  - CEE 532
+  # - CEE 532
   - CHM 305
   - CHM 306
   - CHM 405
   - CHM 406
+  - COS 324
   - COS 343
-  - COS 402
+  - COS 402 
+  - COS 423
   - COS 424
   - COS 426
   - COS 429
-  - COS 423
   - COS 433
   - COS 445
   - COS 451
   - COS 487
-  - COS 521
-  - COS 522
-  - COS 533
-  - COS 557
+  # - COS 521
+  # - COS 522
+  # - COS 533
+  # - COS 557
   - ECO 312
   - ECO 317
   - ECO 414
@@ -125,52 +128,56 @@ req_list:
   - ECO 466
   - ECO 481
   - ECO 513
-  - ECO 324
-  - ECO 325
+  - EEB 324
+  - EEB 325
   - EEB 424
   - ECE 381
   - ECE 382
+  - ECE 396
   - ECE 482
   - ECE 488
-  - ECE 521
-  - ECE 523
-  - ECE 525
-  - ECE 528
-  - ECE 530
-  - ECE 535
+  # - ECE 521
+  # - ECE 523
+  # - ECE 525
+  # - ECE 528
+  # - ECE 530
+  # - ECE 535
+  - GEO 371
   - GEO 422
   - GEO 424
   - GEO 425
   - GEO 441
-  - GEO 557
+  # - GEO 557
   - MAE 335
   - MAE 336
-  - MAE 433A
-  - MAE 433B
+  - MAE 433
   - MAE 434
-  - MAE 541
-  - MAE 542
-  - MAE 545
-  - MAE 546
-  - MAE 552
-  - MAE 559
+  # - MAE 541
+  # - MAE 542
+  # - MAE 545
+  # - MAE 546
+  # - MAE 552
+  # - MAE 559
   - MAT 323
-  - MAT 582
+  # - MAT 582
   - MOL 436
-  - MSE 515
+  # - MSE 515
   - NEU 437
   - ORF 335
   - ORF 350
+  - ORF 387
   - ORF 405
   - ORF 407
+  - ORF 418
   - ORF 435
   - ORF 473
-  - ORF 523
-  - ORF 526
+  # - ORF 523
+  # - ORF 526
+  - PHY 301
   - PHY 304
   - PHY 305
   - PHY 408
-  - PHY 509
-  - PHY 525
-  - PHY 562
+  # - PHY 509
+  # - PHY 525
+  # - PHY 562
   - QCB 408
