--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,50 +9,50 @@ repository = "https://github.com/ggchiriac/compass"
 keywords = ["django", "backend", "student", "planner", "app", "hoagieplan"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 aniso8601 = "^9.0.1"
-asgiref = "^3.7.2"
-build = "^1.0.3"
-certifi = "^2023.7.22"
+asgiref = "^3.8.1"
+build = "^1.2.1"
+certifi = "^2024.7.4"
 charset-normalizer = "^3.3.2"
-dj-database-url = "^2.1.0"
-django = "^4.2.7"
-django-cors-headers = "^4.3.0"
-djangorestframework = "^3.14.0"
-idna = "^3.4"
-lxml = "^4.9.3"
-numpy = "^1.26.2"
-packaging = "^23.2"
-pandas = "^2.1.1"
+dj-database-url = "^2.2.0"
+django = "5.0.6"
+django-cors-headers = "^4.4.0"
+djangorestframework = "^3.15.2"
+idna = "^3.7"
+lxml = "^5.2.2"
+numpy = "^2.0.0"
+packaging = "^24.1"
+pandas = "^2.2.2"
 promise = "^2.3"
 psycopg2-binary = "^2.9.9"
-psycopg2-pool = "^1.1"
-pydeps = "^1.12.17"
-pyproject-hooks = "^1.0.0"
+psycopg2-pool = "^1.2"
+pydeps = "^1.12.20"
+pyproject-hooks = "^1.1.0"
 python-cas = "^1.6.0"
-python-dateutil = "^2.8.2"
-python-dotenv = "^1.0.0"
-pytz = "^2023.3.post1"
+python-dateutil = "^2.9.0.post0"
+python-dotenv = "^1.0.1"
+pytz = "^2024.1"
 pyyaml = "^6.0.1"
-requests = "^2.31.0"
+requests = "^2.32.3"
 ruff = "^0.1.5"
 six = "^1.16.0"
-sqlparse = "^0.4.4"
-stdlib-list = "^0.9.0"
+sqlparse = "^0.5.0"
+stdlib-list = "^0.10.0"
 terminaltables = "^3.1.10"
-typing-extensions = "^4.8.0"
-tzdata = "^2023.3"
-ujson = "^5.8.0"
-urllib3 = "^2.0.6"
-pre-commit = "^3.5.0"
-poetry-plugin-export = "^1.6.0"
-gunicorn = "^21.2.0"
-whitenoise = "^6.6.0"
+typing-extensions = "^4.12.2"
+tzdata = "^2024.1"
+ujson = "^5.10.0"
+urllib3 = "^2.2.2"
+pre-commit = "^3.7.1"
+poetry-plugin-export = "^1.8.0"
+gunicorn = "^22.0.0"
+whitenoise = "^6.7.0"
 django-heroku = "^0.3.1"
-tqdm = "^4.66.1"
-bs4 = "^0.0.1"
-beautifulsoup4 = "^4.12.2"
-selenium = "^4.16.0"
+tqdm = "^4.66.4"
+bs4 = "^0.0.2"
+beautifulsoup4 = "^4.12.3"
+selenium = "^4.22.0"
 webdriver-manager = "^4.0.1"
 thefuzz = "^0.22.1"
 
