--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,60 +12,63 @@
   "dependencies": {
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@geist-ui/react": "^2.2.5",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "@mui/icons-material": "^5.15.0",
-    "@mui/joy": "^5.0.0-beta.18",
-    "@mui/material": "^5.15.0",
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.1.5",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/joy": "^5.0.0-dev.240424162023-9968b4889d",
+    "@mui/material": "^5.16.7",
     "@tailwindcss/forms": "^0.5.7",
     "@types/react": "18.2.45",
-    "@types/react-dom": "^18.2.17",
-    "clsx": "^2.0.0",
-    "daisyui": "^4.10.1",
+    "@types/react-dom": "^18.3.0",
+    "clsx": "^2.1.1",
+    "daisyui": "^4.12.10",
     "date-fns": "^3.6.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-prettier": "^5.2.1",
     "evergreen-ui": "^7.1.9",
-    "next": "^14.2.3",
+    "lucide-react": "^0.400.0",
+    "next": "^14.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-virtuoso": "^4.7.7",
+    "react-virtuoso": "^4.10.1",
     "react-window": "^1.8.10",
-    "sass": "^1.71.1",
+    "sass": "^1.77.8",
     "typescript": "5.3.3",
     "typescript-lru-cache": "^2.0.0",
-    "undici": "^6.11.1",
-    "vercel": "^32.3.0",
-    "webpack-bundle-analyzer": "^4.10.1",
-    "zustand": "^4.4.7"
+    "undici": "^6.19.8",
+    "vercel": "^32.7.2",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@dnd-kit/core": "^6.1.0",
-    "@types/node": "^20.10.4",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vercel/analytics": "^1.1.1",
-    "@vercel/speed-insights": "^1.0.2",
-    "autoprefixer": "^10.4.16",
-    "classnames": "^2.3.2",
+    "@types/node": "^20.16.1",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
+    "autoprefixer": "^10.4.20",
+    "classnames": "^2.5.1",
     "color-hash": "^2.0.2",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.35.0",
     "next-pwa": "^5.6.0",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.41",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^9.3.0",
-    "sharp": "^0.33.0",
+    "postcss-preset-env": "^9.6.0",
+    "sharp": "^0.33.5",
     "tailwindcss": "3.4.3",
-    "webpack": "^5.89.0"
+    "webpack": "^5.94.0"
   },
   "license": "MIT",
   "trustedDependencies": [
-    "@vercel/speed-insights"
+    "@vercel/speed-insights",
+    "esbuild",
+    "sharp"
   ]
 }
