--- a/backend/certificates/AMS.yaml
+++ b/backend/certificates/AMS.yaml
@@ -3,29 +3,29 @@ type: Certificate
 name: American Studies
 code: AMS
 degree:
-description: Objects of study range across multiple media, including texts, images,
-  works of art, music, performance, and film, and draw from the diverse fields of
-  literature, history, political science, art history, economics, law, cultural studies,
-  and the history of science.  The course attends to how knowledge about America has
-  and continues to be produced, disseminated, and consumed, emphasizing the cognitive
-  processes associated with the invention and delineation of America.
+description: This interdisciplinary plan of study prepares students to make intellectual
+connections in the world through the experiences and place of America in current and
+historical times. Combining a wide range of fields, and grounded in the histories
+and experiences of diverse peoples and cultures that make up the United States of
+America, the program explores different conceptual framings of America and the role
+of the United States in global, local and transnational relationships.
 urls:
-- https://ams.princeton.edu/academics/program-study
+- https://effroncenter.princeton.edu/areas-study/american-studies
 contacts:
-- type: Program Assistant
-  name: Candice Kessel
-  email: cwkessel@princeton.edu
+- type: Director
+  name: Aisha Beliso-De Jesús
+  email: beliso.dejesus@princeton.edu
 req_list:
 - name: Core
   max_counted: 1
   min_needed: 1
   explanation: This course introduces a selection of signature ideas and debates that
-    made the nation what it is today and what it is becoming.  Objects of study range
+    made the nation what it is today and what it is becoming. Objects of study range
     across multiple media, including texts, images, works of art, music, performance,
     and film, and draw from the diverse fields of literature, history, political science,
     art history, economics, law, cultural studies, and the history of science.  The
     course attends to how knowledge about America has and continues to be produced,
-    disseminated, and consumed, emphasizing the cognitive processes associated with
+      disseminated, and consumed, emphasizing the cognitive processes associated with
     the invention and delineation of America.
   double_counting_allowed: false
   max_common_with_major: 0
@@ -33,51 +33,25 @@ req_list:
   course_list:
   - AMS 101
 - name: Breadth
-  max_counted: 3
+  max_counted: 1
   min_needed: 3
-  explanation: Three courses in American Studies, Asian American Studies, or Latino
-    Studies, either originating in the relevant program or cross-listed, and representing
-    disciplinary breadth in the social sciences, arts, and humanities. No more than
-    one course taken in fulfillment of the student’s concentration may be counted
-    toward the certificate.
+  explanation: Three courses in American studies (AMS), either originating in the program
+  or cross-listed, and preferably representing disciplinary breadth in the social sciences,
+  arts, and humanities. No more than one course taken in fulfillment of a student's
+  concentration may be counted toward the certificate.
   double_counting_allowed: false
   max_common_with_major: 1
   pdfs_allowed: 0
   course_list:
-  - AAS 305
-  - AAS 322
-  - AAS 363
-  - AAS 380
-  - AMS 306
-  - AMS 335
-  - AMS 356
+  - AMS *
+- name: Advanced Seminar
+  max_counted: 1
+  min_needed: 1
+  explanation: An advanced seminar in American studies, preferably taken in the senior year.
+  double_counting_allowed: false
+  max_common_with_major: 0
+  pdfs_allowed: 0
+  course_list:
   - AMS 403
   - AMS 404
-  - ART 470
-  - GSS 345
-  - HIS 444
-  - ASA 347
-  - ATL 498
-  - COM 431
-  - ENG 401
-  - ENG 408
-  - ENV 357
-  - MUS 260
-  - HUM 346
-  - THR 385
-  - SPI 385
-  - SPI 387
-  - AMS 301
-  - AMS 307
-  - AMS 311
-  - AMS 361
-  - AMS 395
-  - ART 384
-  - ART 393
-  - CWR 345
-  - ENG 416
-  - GSS 319
-  - JDS 312
-  - REL 360
-  - SAS 360
-  - THR 332
+  - AMS 406
