--- a/backend/certificates/ART.yaml
+++ b/backend/certificates/ART.yaml
@@ -1,4 +1,7 @@
 ---
+# TODO: "Beginning in AY 2024–2025, the Minor in Archaeology will replace the Certificate in Archaeology."
+# Source: https://artandarchaeology.princeton.edu/about-us/program-archaeology
+# So remove the certificate entirely?
 type: Certificate
 name: Archaeology
 code: ART
