--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,3 +1,5 @@
 COMPASS= # COS 333 Compass
 PUCOMPASS= # IW Compass
-BACKEND=
+BACKEND= # Backend URL
+CAS_URL= # CAS URL
+AUTH_SECRET_KEY= # Auth secret key for JWT-based authentication
