--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,7 @@ COMPASS= # COS 333 Compass
 PUCOMPASS= # IW Compass
 BACKEND=
 CAS_URL=
+AUTH_SECRET_KEY=
 SECRET_KEY=
 DEBUG= # IMPORTANT: set DEBUG to False once we are in production
 USE_HTTPS= # IMPORTANT: set USE_HTTPS to False if developing in localhost
