--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hoagieplan",
-  "version": "1.90-beta",
+  "version": "1.91-beta",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000 --turbo",
@@ -15,7 +15,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@geist-ui/react": "^2.2.5",
-    "@headlessui/react": "^1.7.19",
+    "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^5.16.7",
     "@mui/joy": "^5.0.0-dev.240424162023-9968b4889d",
@@ -23,7 +23,9 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/react": "18.2.45",
     "@types/react-dom": "^18.3.0",
+    "@types/web": "^0.0.157",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.2.1",
     "daisyui": "^4.12.10",
     "date-fns": "^3.6.0",
     "eslint-config-next": "14.0.4",
@@ -31,9 +33,11 @@
     "eslint-plugin-prettier": "^5.2.1",
     "evergreen-ui": "^7.1.9",
     "lucide-react": "^0.400.0",
+    "moment": "^2.30.1",
     "next": "^14.2.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-big-calendar": "^1.13.4",
+    "react-dom": "18.3.1",
     "react-virtuoso": "^4.10.1",
     "react-window": "^1.8.10",
     "sass": "^1.77.8",
@@ -54,7 +58,7 @@
     "autoprefixer": "^10.4.20",
     "classnames": "^2.5.1",
     "color-hash": "^2.0.2",
-    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.35.0",
     "next-pwa": "^5.6.0",
