--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,17 +23,20 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/react": "18.2.45",
     "@types/react-dom": "^18.3.0",
+    "@types/web": "^0.0.157",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.2.1",
     "daisyui": "^4.12.10",
     "date-fns": "^3.6.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "evergreen-ui": "^7.1.9",
+    "jose": "^5.7.0",
     "lucide-react": "^0.400.0",
     "next": "^14.2.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-virtuoso": "^4.10.1",
     "react-window": "^1.8.10",
     "sass": "^1.77.8",
