--- a/backend/certificates/TAS-E.yaml
+++ b/backend/certificates/TAS-E.yaml
@@ -1,7 +1,7 @@
 ---
 type: Certificate
 name: Technology and Society - Energy Track
-code: TAS-E # TODO: Decide on code
+code: TAS-E
 degree:
 description: "One would be hard-pressed to find any aspect of society today
 that is not influenced by evolving technology in a significant way. Similarly,
