--- a/backend/certificates/TAS-IT.yaml
+++ b/backend/certificates/TAS-IT.yaml
@@ -1,7 +1,7 @@
 ---
 type: Certificate
 name: Technology and Society - IT Track
-code: TAS-IT # TODO: Decide on code
+code: TAS-IT
 degree:
 description: "One would be hard-pressed to find any aspect of society today
 that is not influenced by evolving technology in a significant way. Similarly,
