--- a/backend/certificates/ACE.yaml
+++ b/backend/certificates/ACE.yaml
@@ -7,7 +7,7 @@ urls:
 - https://arch-eng.princeton.edu/program-requirements/
 description: The Program in Architecture and Engineering enables students to work
   at the intersection of engineering and architecture.  It is a framework for interdisciplinary
-  study to tackle problems that cannot be addressed by one discipline.  The certificate
+  study to tackle problems that cannot be addressed by one discipline. The certificate
   is an opportunity to respond dynamically to evolving global challenges, where elegant
   and effective solutions lead to more resilient and sustainable communities.
 contacts:
@@ -58,15 +58,15 @@ req_list:
       course_list:
       - CEE 262A
       - CEE 262B
-    - name: Structures Electives
+    - name: Electives
       max_counted: 3
-      min_needed: 3
+      min_needed: 1
       explanation: Courses are selected from a list of electives either following a field
       of expertise or building a unique interdisciplinary set approved by advisor.
       req_list:
-      - name: Structures Electives
+      - name: Structures
         max_counted: 3
-        min_needed: 2
+        min_needed: 1
         explanation:
         course_list:
         - ARC 204
@@ -89,9 +89,9 @@ req_list:
         - EGR 251
         - MSE 302
       - name: Materials
-        max_counted: 1
+        max_counted: 3
         min_needed: 1
-        explanation: # TODO: Either MSE 301 OR MAE 324 can count
+        explanation: Either MSE 301 OR MAE 324 can count.
         course_list:
         - MSE 301
         - MAE 324
@@ -108,7 +108,7 @@ req_list:
       - ARC 311
     - name: Computation Electives
       max_counted: 3
-      min_needed: 3
+      min_needed: 1
       explanation: Courses are selected from a list of electives either following a field
       of expertise or building a unique interdisciplinary set approved by advisor.
       course_list:
@@ -140,13 +140,13 @@ req_list:
       - ARC 208
     - name: Environment Electives
       max_counted: 3
-      min_needed: 3
+      min_needed: 1
       explanation: Courses are selected from a list of electives either following a field
       of expertise or building a unique interdisciplinary set approved by advisor.
       req_list:
       - name: Environment Electives
         max_counted: 3
-        min_needed: 2
+        min_needed: 1
         explanation:
         course_list:
         - ARC 204
@@ -170,7 +170,7 @@ req_list:
       - name: Materials
         max_counted: 1
         min_needed: 1
-        explanation: # TODO: Either MSE 301 OR MAE 324 can count
+        explanation: Either MSE 301 OR MAE 324 can count.
         course_list:
         - MSE 301
         - MAE 324
