--- a/backend/certificates/LAC-CLA.yaml
+++ b/backend/certificates/LAC-CLA.yaml
@@ -31,29 +31,24 @@ req_list:
     - LAT 2**
   - name: 300-level
     max_counted: 3
-    min_needed: 2
+    min_needed: 1
     explanation:
     course_list:
     - CLG 3**
     - LAT 3**
 - name: Independent Work
-  max_counted: 0
-  min_needed: 0
-  explanation: "A piece of independent work. This can be satisfied in several ways:
-  (a) by a substantial paper growing out of one of the courses taken to fulfill the certificate
-  requirement (this will be in addition to the work required in the course);
-  (b) by a substantial independent paper advised by a member of the Classics faculty;
-  or (c) with the agreement of the home department and Classics DUS, by a piece of independent
-  work that satisfies the requirements of both Classics and the home department. As a
-  substitute for this requirement, students may take either an additional course in their
-  language (CLG or LAT) at the 200- or 300-level or a CLA course focusing on the culture of
-  their certificate program (Greek or Roman)."
-  double_counting_allowed: false
-  no_req:
-- name: Independent Work
-  max_counted: 0
-  min_needed: 0
-  explanation: To qualify for the certificate program, students must file a written application
-  with the Department of Classics before October 1 of their senior year.
-  double_counting_allowed: false
-  no_req:
+  max_counted: 1
+  min_needed: 1
+  explanation: |-
+    <i>Editor's Note: Students may complete this requirement without enrolling in any numbered course, so hoagieplan does not check it.</i><br><br>
+
+    A piece of independent work. This can be satisfied in several ways:<br>
+    (a) by a substantial paper growing out of one of the courses taken to fulfill the certificate
+    requirement (this will be in addition to the work required in the course);<br>
+    (b) by a substantial independent paper advised by a member of the Classics faculty; or<br>
+    (c) with the agreement of the home department and Classics DUS, by a piece of independent
+    work that satisfies the requirements of both Classics and the home department.<br><br> 
+    
+    As a substitute for this requirement, students may take either an additional course in their
+    language (CLG or LAT) at the 200- or 300-level or a CLA course focusing on the culture of
+    their certificate program (Greek or Roman).
