--- a/backend/certificates/OQDS.yaml
+++ b/backend/certificates/OQDS.yaml
@@ -3,20 +3,21 @@ type: Certificate
 name: Optimization and Quantitative Decision Science
 code: OQDS
 degree:
-description: The Certificate Program in Optimization and Quantitative Decision Science
-(OQDS) is focused on developing quantitative skills for optimal decision-making in
-complex and uncertain environments. Through this certificate program, students will
-learn to quantify risk and uncertainty and to view any complex decision through the
-lens of mathematical optimization. This outlook will give them a more structured
-understanding of the decision itself, as they learn to rigorously formulate their
-constraints, objective function(s) and the uncertainties involved. It will also lead
-students to the proper algorithmic tools that are needed to arrive at an optimal decision.
+description: |-
+  The Certificate Program in Optimization and Quantitative Decision Science
+  (OQDS) is focused on developing quantitative skills for optimal decision-making in
+  complex and uncertain environments. Through this certificate program, students will
+  learn to quantify risk and uncertainty and to view any complex decision through the
+  lens of mathematical optimization. This outlook will give them a more structured
+  understanding of the decision itself, as they learn to rigorously formulate their
+  constraints, objective function(s) and the uncertainties involved. It will also lead
+  students to the proper algorithmic tools that are needed to arrive at an optimal decision.<br><br>
 
-The certificate program may be of interest to students in engineering, the sciences
-and the liberal arts who wish to pursue analytical thinking and quantitative reasoning
-for the purpose of decision-making under uncertainty. Emphasis is placed on rigorous
-modeling and analysis, taking advantage of the vast flow of data and ubiquitous
-computing power available today.
+  The certificate program may be of interest to students in engineering, the sciences
+  and the liberal arts who wish to pursue analytical thinking and quantitative reasoning
+  for the purpose of decision-making under uncertainty. Emphasis is placed on rigorous
+  modeling and analysis, taking advantage of the vast flow of data and ubiquitous
+  computing power available today.
 urls:
 - https://ua.princeton.edu/fields-study/certificate-programs/optimization-and-quantitative-decision-science
 - https://orfe.princeton.edu/undergraduate/oqds-certificate
@@ -108,7 +109,7 @@ req_list:
     - PSY 255
     - SPI 340
   - name: Category 1 or 2
-    max_counted: 3
+    max_counted: 2
     min_needed: 1
     explanation:
     course_list:
@@ -130,23 +131,22 @@ req_list:
     - SOC 301
     - SPI 200
 - name: Independent Work
-  max_counted: 0
-  min_needed: 0
-  explanation: A senior thesis or project must be completed and submitted to the program
-  director (oqds@princeton.edu) that demonstrates a command of some portion of the core
-  disciplines of uncertainty analysis and/or optimization. Students in engineering departments
-  that require a one-semester project can typically use a suitably designed project to satisfy
-  the requirement.
+  max_counted: 1
+  min_needed: 1
+  explanation: |-
+    A senior thesis or project must be completed and submitted to the program
+    director (oqds@princeton.edu) that demonstrates a command of some portion of the core
+    disciplines of uncertainty analysis and/or optimization. Students in engineering departments
+    that require a one-semester project can typically use a suitably designed project to satisfy
+    the requirement.<br><br>
 
-  Acceptable theses can be on a wide range of topics, but they must demonstrate a command of the
-  core disciplines of the OQDS certificate program, including stochastics and/or optimization.
-  The thesis must demonstrate, in appropriate mathematics, the ability to model a problem and
-  perform analysis that leads to some conclusion or scientific result. A thesis with minimal
-  or no mathematical modeling is not acceptable.
+    Acceptable theses can be on a wide range of topics, but they must demonstrate a command of the
+    core disciplines of the OQDS certificate program, including stochastics and/or optimization.
+    The thesis must demonstrate, in appropriate mathematics, the ability to model a problem and
+    perform analysis that leads to some conclusion or scientific result. A thesis with minimal
+    or no mathematical modeling is not acceptable.<br><br>
 
-  Theses that do not qualify include "soft" topics such as the history of a nation's economy,
-  and hard-science theses (laboratory-based theses) that do not have a significant modeling
-  or data-analysis component (for example, collecting observations and computing basic
-  statistics is not sufficient).
-  double_counting_allowed: false
-  no_req:
+    Theses that do not qualify include "soft" topics such as the history of a nation's economy,
+    and hard-science theses (laboratory-based theses) that do not have a significant modeling
+    or data-analysis component (for example, collecting observations and computing basic
+    statistics is not sufficient).
