--- a/backend/certificates/GER.yaml
+++ b/backend/certificates/GER.yaml
@@ -59,3 +59,4 @@ req_list:
     which may be a revised version of a paper written for one of the four required courses.<br>
     2. Write a chapter from the senior thesis principally devoted to a German-related topic.<br>
     3. Complete an additional 300-level class taught in German.
+  no_req:
