--- a/backend/certificates/LAC-CLA.yaml
+++ b/backend/certificates/LAC-CLA.yaml
@@ -52,3 +52,4 @@ req_list:
     As a substitute for this requirement, students may take either an additional course in their
     language (CLG or LAT) at the 200- or 300-level or a CLA course focusing on the culture of
     their certificate program (Greek or Roman).
+  no_req:
