--- a/backend/certificates/LAC-POR.yaml
+++ b/backend/certificates/LAC-POR.yaml
@@ -76,3 +76,4 @@ req_list:
     for one of the courses taken towards the certificate. Advisers are not
     assigned. One additional upper-division POR course (above the 100-level)
     may be substituted for the independent work.
+  no_req:
