--- a/backend/certificates/LAC-SPA.yaml
+++ b/backend/certificates/LAC-SPA.yaml
@@ -82,3 +82,4 @@ req_list:
     for one of the courses taken towards the certificate. Advisers are not assigned.
     One additional 300-level (or higher) SPA course may be substituted for the
     independent work.
+  no_req:
