Cleaned up TAS-E certificate reqs

--- a/backend/certificates/TAS-E.yaml
+++ b/backend/certificates/TAS-E.yaml
@@ -30,7 +30,7 @@ description: |-
   needs while protecting the environment is one of the most pressing challenges of our
   times. These problems are complex and intertwined, not only involving a need for
   advances in science and engineering, but also requiring changes in human behavior,
-  economic analyses and innovations in institutions as well as thoughtful policy.<br><br>
+  economic analyses and innovations in institutions as well as thoughtful policy.
 urls:
 - https://ua.princeton.edu/fields-study/certificate-programs/technology-and-society
 - https://acee.princeton.edu/education/technology-society/program-of-study/
@@ -130,7 +130,7 @@ req_list:
   min_needed: 1
   explanation: |-
     <i>Editor's Note: Students do not enroll in any numbered course for this requirement, so hoagieplan does not check it.</i><br><br>
-    
+
     All students are required to undertake a one-semester independent
     research project in Energy. For A.B. students, this includes a junior paper. This
     may be substituted by a significant component in their senior thesis (at least a
